--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,8 +42,6 @@
                         android:scrollbars="vertical"/>
 
                 </LinearLayout>
-
-                <ScrollView
                     android:id="@+id/ScrollView1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -53,50 +51,18 @@
                         android:layout_height="match_parent"
                         android:orientation="vertical">
 
-                        <ImageView
-                            android:id="@+id/imageView2"
+                        <GridView
+                            android:id="@+id/gridViewImages"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            app:srcCompat="@drawable/download" />
+                            android:numColumns="3"
+                            android:horizontalSpacing="10dp"
+                            android:verticalSpacing="10dp"
+                            android:paddingTop="10dp"
+                            android:paddingBottom="10dp">
+                        </GridView>
 
-                        <ImageView
-                            android:id="@+id/imageView3"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@drawable/ball" />
-                        <ImageView
-                            android:id="@+id/imageView4"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@drawable/flower" />
-                        <ImageView
-                            android:id="@+id/imageView5"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@drawable/leaf" />
-                        <ImageView
-                            android:id="@+id/imageView6"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@drawable/whale" />
-                        <ImageView
-                            android:id="@+id/imageView7"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@drawable/snowman" />
-                        <ImageView
-                            android:id="@+id/imageView8"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@drawable/sky" />
-
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/recycler2"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:scrollbars="vertical" />
                     </LinearLayout>
-                </ScrollView>
 
                 <LinearLayout
                     android:id="@+id/tab3"
