탭 3 & 앱 아이콘 변경

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,18 +39,17 @@
                         android:id="@+id/button"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Button" />
+                        android:onClick="OnClickHandler"
+                        android:text="전화번호 추가" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recycler1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:scrollbars="vertical" />
+                        android:scrollbars="vertical"
+                        android:layout_marginBottom="200dp"/>
 
                 </LinearLayout>
-                    android:id="@+id/ScrollView1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
                     <LinearLayout
                         android:id="@+id/tab2"
                         android:layout_width="match_parent"
@@ -65,16 +64,67 @@
                             android:horizontalSpacing="10dp"
                             android:verticalSpacing="10dp"
                             android:paddingTop="10dp"
-                            android:paddingBottom="10dp">
+                            android:paddingBottom="10dp"
+                            android:layout_marginBottom="200dp">
                         </GridView>
 
                     </LinearLayout>
 
-                <LinearLayout
+                <RelativeLayout
                     android:id="@+id/tab3"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"/>
+                    android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:id="@+id/II_input"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="1dp"
+                        android:layout_marginLeft="1dp"
+                        android:layout_marginEnd="1dp"
+                        android:layout_marginRight="1dp"
+                        android:orientation="horizontal"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <EditText
+                            android:id="@+id/et_address"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:ems="10"
+                            android:hint="@string/app_name1"
+                            android:inputType="textPersonName"
+                            android:padding="10dp" />
+                        <EditText
+                            android:id="@+id/filename"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:ems="10"
+                            android:hint="@string/app_name2"
+                            android:inputType="textPersonName"
+                            android:padding="10dp" />
+
+                        <Button
+                            android:id="@+id/btn_add"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/add" />
+                    </LinearLayout>
+
+                    <ListView
+                        android:id="@+id/Iv_bookmark"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/II_input"
+                        android:layout_marginTop="16dp"
+                        app:layout_constraintBottom_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </RelativeLayout>
             </FrameLayout>
         </LinearLayout>
     </TabHost>
