--- a/app/src/main/res/layout/page.xml
+++ b/app/src/main/res/layout/page.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="#a0c0d7"
     android:orientation="vertical" >
 
 
