--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -147,6 +147,20 @@
                             android:shadowDy="0"
                             android:shadowRadius="5"/>
 
+                        <Button
+                            android:id="@+id/btn_remove"
+                            android:layout_width="300dp"
+                            android:layout_height="50dp"
+                            android:layout_weight="1"
+                            android:text="삭제"
+                            android:textColor="#FFFFFF"
+                            android:background="@drawable/buttonshape"
+                            android:textSize="18sp"
+                            android:shadowColor="#A8A8A8"
+                            android:shadowDx="0"
+                            android:shadowDy="0"
+                            android:shadowRadius="5"/>
+
                     </LinearLayout>
 
                     <ListView
@@ -158,9 +172,9 @@
                         android:layout_marginTop="16dp"
                         app:layout_constraintBottom_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent" >
 
-
+                    </ListView>
 
 
                 </RelativeLayout>
