주소 서버 연결 성공 갤러리 하다말음

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,18 @@
                     android:orientation="vertical">
 
                     <Button
+                        android:id="@+id/btn_address"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="주소록 가져오기" />
+
+                    <TextView
+                        android:id="@+id/tvData"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="TextView" />
+
+                    <Button
                         android:id="@+id/button"
                         android:layout_width="300dp"
                         android:layout_marginTop="10dp"
