--- a/app/src/main/res/layout/rank.xml
+++ b/app/src/main/res/layout/rank.xml
@@ -4,22 +4,14 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:Text="추천하는 야식은"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tv_foodname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tv_count"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:Text="입니다."
+        android:layout_height="wrap_content"
         android:text="TextView" />
 </LinearLayout>
