--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="#a0c0d7"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity1">
 
     <TabHost
         android:id="@+id/tabHost1"
