--- a/app/src/main/res/layout/activity_rank_food.xml
+++ b/app/src/main/res/layout/activity_rank_food.xml
@@ -3,19 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name" />
-
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/ranklist">
-
-    </ListView>
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical"
+        android:id="@+id/ranklist"
+        android:layout_marginBottom="30dp"/>
 </LinearLayout>
