--- a/app/src/main/res/drawable/selector3.xml
+++ b/app/src/main/res/drawable/selector3.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_selected="true" android:drawable="@drawable/bookmark_selected"></item>
-    <item android:drawable = "@drawable/bookmark"></item>
+    <item android:state_selected="true" android:drawable="@drawable/pizza_black"></item>
+    <item android:drawable = "@drawable/pizza_white"></item>
 </selector>
