--- a/app/src/main/res/layout/activity_rank_food.xml
+++ b/app/src/main/res/layout/activity_rank_food.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#a0c0d7">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
+        android:background="#a0c0d7"
         android:id="@+id/ranklist"
         android:layout_marginBottom="30dp"/>
 </LinearLayout>
